<resources>
    <string name="app_name">SamayRaga</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="home_page">Home Page</string>
    <string name="about_page">About Page</string>
    <string name="prahars_page">List of Samay</string>
    <string name="raagas_page">Raagas Page</string>
    <string name="raaga_info_page">Raaga Info Page</string>
    <string name="prahars">Samay List</string>
    <string name="raagas">Raagas</string>
    <string name="raaga_info">Raaga Info</string>
    <string name="title_raaga">Current raga</string>
    <string name="from_time">12 midnight</string>
    <string name="to_time">12 noon</string>
    <string name="play">Play Now</string>
    <string name="raga_name">Komal Rishabh Asavari</string>
    <string name="thaat_name">Thaat Name</string>
    <string name="title_format">Samay: %s</string>
    <string name="from_format">From: %s</string>
    <string name="to_format">To: %s</string>
    <string name="samay_list_title">Samay List</string>
    <string name="samay_number">11. </string>
    <string name="error_media_not_found">Media not found!!</string>
    <string name="generic_error">Generic Error!!</string>
    <string name="broadcast_seekbar_update">broadcast_seekbar_update</string>
    <string name="broadcast_seekbar_value">broadcast_seekbar_value</string>
    <string name="broadcast_update_ui">broadcast_update_ui</string>
    <string name="broadcast_new_media_id">broadcast_new_media_id</string>
    <string name="string_remove_from_playlist">Remove from playlist?</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>
</resources>