<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="raagasFragmentViewModel"
            type="com.example.raaga.raagas.RaagasFragmentViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/button_padding"
        tools:context=".raagas.RaagasFragment"
        android:background="@color/secondaryColor">

        <TextView
            android:id="@+id/current_raaga1"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@{raagasFragmentViewModel.currentRaga}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_raaga" />

        <TextView
            android:id="@+id/from_time1"
            style="@style/description_style"
            android:fontFamily="@font/roboto"
            android:text="@{@string/from_format(raagasFragmentViewModel.timeFrom)}"
            app:layout_constraintBottom_toTopOf="@+id/to_time1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/current_raaga1"
            tools:text="@string/from_time" />

        <TextView
            android:id="@+id/to_time1"
            style="@style/description_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/to_format(raagasFragmentViewModel.timeTo)}"
            app:layout_constraintBottom_toBottomOf="@+id/current_raaga1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_time1"
            tools:text="@string/to_time" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/raga_list1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_raaga1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>